Se creo un nuevo componente cart y se limpio la estructura del codigo

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1ee4c44d-618f-4258-86d0-ff28f98a82e7"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
