--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/swiper/swiper.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           },
