--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
     "rxjs": "~6.6.0",
+    "swiper": "^6.5.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
