--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/flexboxgrid/dist/flexboxgrid.min.css",
               "./node_modules/swiper/swiper.scss",
               "src/styles.scss"
             ],
