--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/common": "~11.2.13",
     "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.13",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.13",
     "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "firebase": "^8.6.1",
     "flexboxgrid": "^6.3.1",
     "rxjs": "~6.6.0",
     "swiper": "^6.5.9",
