--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
     "firebase": "^8.6.1",
+    "firebase-tools": "^9.10.2",
     "flexboxgrid": "^6.3.1",
     "rxjs": "~6.6.0",
     "swiper": "^6.5.9",
