--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
     "@sentry/browser": "^6.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^8.6.1",
     "firebase-tools": "^9.10.2",
     "flexboxgrid": "^6.3.1",
