--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "analyzer": "webpack-bundle-analyzer dist/platzi-store/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +54,7 @@
     "puppeteer": "^9.1.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
