--- a/package.json
+++ b/package.json
@@ -13,33 +13,37 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^11.2.12",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "^11.2.14",
     "@angular/compiler": "^11.2.14",
     "@angular/core": "^11.2.14",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "^11.2.14",
-    "@angular/material": "^11.2.12",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "^11.2.14",
     "@angular/platform-browser-dynamic": "^11.2.14",
     "@angular/router": "^11.2.14",
-    "@sentry/browser": "^6.4.0",
+    "@sentry/browser": "^6.4.1",
     "file-saver": "^2.0.5",
     "firebase": "^8.6.1",
     "firebase-tools": "^9.11.0",
     "flexboxgrid": "^6.3.1",
+    "ngx-quicklink": "^0.2.7",
     "rxjs": "~6.6.0",
-    "swiper": "^6.6.1",
+    "swiper": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-devkit/build-angular": "^0.1102.13",
     "@angular/cli": "^11.2.13",
     "@angular/compiler-cli": "^11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.13",
     "codelyzer": "^6.0.0",
+    "guess-parser": "^0.4.22",
+    "guess-webpack": "^0.4.22",
     "jasmine": "^3.7.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
